@@ -347,6 +347,7 @@ BEGIN
     POPUP "NoGame"
     BEGIN
         MENUITEM "Open ROM",                    FCEU_CONTEXT_OPENROM
+        MENUITEM "Last ROM used",               FCEUX_CONTEXT_RECENTROM1
         MENUITEM SEPARATOR
         MENUITEM "&Help....",                   FCEU_CONTEXT_FCEUHELP
     END
